feat(hotels): add crud operations
