# src/main/java/com/diegchav/staywise/api/controller/HotelController.java
@@ -1,0 +1,52 @@
+package com.diegchav.staywise.api.controller;
+
+import com.diegchav.staywise.api.dto.CreateHotelRequest;
+import com.diegchav.staywise.api.dto.HotelResponse;
+import com.diegchav.staywise.api.dto.UpdateHotelRequest;
+import com.diegchav.staywise.service.HotelService;
+import jakarta.validation.Valid;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.*;
+
+import java.util.List;
+import java.util.UUID;
+
+@RestController
+@RequestMapping("/api/hotels")
+public class HotelController {
+    private final HotelService service;
+
+    public HotelController(HotelService service) {
+        this.service = service;
+    }
+
+    @GetMapping
+    public List<HotelResponse> getAll() {
+        return service.getAll();
+    }
+
+    @GetMapping("/{id}")
+    public ResponseEntity<HotelResponse> get(@PathVariable UUID id) {
+        return ResponseEntity.ok(service.get(id));
+    }
+
+    @PostMapping
+    public ResponseEntity<HotelResponse> create(@Valid @RequestBody CreateHotelRequest request) {
+        return ResponseEntity
+                .status(HttpStatus.CREATED)
+                .body(service.create(request));
+    }
+
+    @PatchMapping("/{id}")
+    public ResponseEntity<HotelResponse> update(@PathVariable UUID id, @Valid @RequestBody UpdateHotelRequest request) {
+        return ResponseEntity.ok(service.update(id, request));
+    }
+
+    @DeleteMapping("/{id}")
+    public ResponseEntity<Void> delete(@PathVariable UUID id) {
+        service.deleteById(id);
+
+        return ResponseEntity.noContent().build();
+    }
+}
