# src/main/java/com/diegchav/staywise/api/dto/UpdateHotelRequest.java
@@ -1,0 +1,8 @@
+package com.diegchav.staywise.api.dto;
+
+public record UpdateHotelRequest(
+        String name,
+        String address,
+        String city,
+        String country
+) {}
