# src/main/java/com/diegchav/staywise/api/dto/ValidationError.java
@@ -1,0 +1,6 @@
+package com.diegchav.staywise.api.dto;
+
+public record ValidationError(
+        String field,
+        String error
+) {}
