# src/main/java/com/diegchav/staywise/api/error/GlobalExceptionHandler.java
@@ -1,14 +1,30 @@
 package com.diegchav.staywise.api.error;
 
 import com.diegchav.staywise.api.dto.ErrorResponse;
+import com.diegchav.staywise.api.dto.ValidationError;
 import com.diegchav.staywise.exception.*;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 
+import java.util.ArrayList;
+import java.util.List;
+
 @RestControllerAdvice
 public class GlobalExceptionHandler {
+    @ExceptionHandler(BookingNotFoundException.class)
+    public ResponseEntity<ErrorResponse> handleBookingNotFoundException(BookingNotFoundException ex) {
+        var errorResponse = new ErrorResponse(
+                ex.getMessage(),
+                HttpStatus.NOT_FOUND.value()
+        );
+
+        return ResponseEntity.status(HttpStatus.NOT_FOUND)
+                .body(errorResponse);
+    }
+
     @ExceptionHandler(IdempotencyProcessingException.class)
     public ResponseEntity<ErrorResponse> handleIdempotencyProcessingException(IdempotencyProcessingException ex) {
         var errorResponse = new ErrorResponse(
@@ -20,8 +36,8 @@ public class GlobalExceptionHandler {
                 .body(errorResponse);
     }
 
-    @ExceptionHandler(NoInventoryException.class)
-    public ResponseEntity<ErrorResponse> handleNoInventoryException(NoInventoryException ex) {
+    @ExceptionHandler(HotelNotFoundException.class)
+    public ResponseEntity<ErrorResponse> handleHotelNotFoundException(HotelNotFoundException ex) {
         var errorResponse = new ErrorResponse(
                 ex.getMessage(),
                 HttpStatus.NOT_FOUND.value()
@@ -31,19 +47,13 @@ public class GlobalExceptionHandler {
                 .body(errorResponse);
     }
 
-    @ExceptionHandler(SoldOutException.class)
-    public ResponseEntity<ErrorResponse> handleSoldOutException(SoldOutException ex) {
-        var errorResponse = new ErrorResponse(
-                ex.getMessage(),
-                HttpStatus.BAD_REQUEST.value()
-        );
-
-        return ResponseEntity.status(HttpStatus.BAD_REQUEST)
-                .body(errorResponse);
+    @ExceptionHandler(HotelUpdateException.class)
+    public ResponseEntity<List<ValidationError>> handleHotelUpdateException(HotelUpdateException ex) {
+        return ResponseEntity.badRequest().body(ex.getErrors());
     }
 
-    @ExceptionHandler(BookingNotFoundException.class)
-    public ResponseEntity<ErrorResponse> handleBookingNotFoundException(BookingNotFoundException ex) {
+    @ExceptionHandler(NoInventoryException.class)
+    public ResponseEntity<ErrorResponse> handleNoInventoryException(NoInventoryException ex) {
         var errorResponse = new ErrorResponse(
                 ex.getMessage(),
                 HttpStatus.NOT_FOUND.value()
@@ -62,5 +72,27 @@ public class GlobalExceptionHandler {
 
         return ResponseEntity.status(HttpStatus.CONFLICT)
                 .body(errorResponse);
+    }
+
+    @ExceptionHandler(SoldOutException.class)
+    public ResponseEntity<ErrorResponse> handleSoldOutException(SoldOutException ex) {
+        var errorResponse = new ErrorResponse(
+                ex.getMessage(),
+                HttpStatus.BAD_REQUEST.value()
+        );
+
+        return ResponseEntity.status(HttpStatus.BAD_REQUEST)
+                .body(errorResponse);
+    }
+
+    @ExceptionHandler(MethodArgumentNotValidException.class)
+    public ResponseEntity<List<ValidationError>> handleValidationExceptions(MethodArgumentNotValidException ex) {
+        var errors = new ArrayList<ValidationError>();
+
+        ex.getBindingResult().getFieldErrors().forEach(error -> {
+            errors.add(new  ValidationError(error.getField(), error.getDefaultMessage()));
+        });
+
+        return ResponseEntity.badRequest().body(errors);
     }
 }
